# datalog-refactoring

./: .gitignore  datalog.cabal  project.vim
src/: Backend.hs  Katalog.hs  Lang.hs  Main.hs  Parser.hs  PrettyPrint.hs  REPL.hs
