Name:                datalog 
Version:             0.1
Synopsis:            datalog interpreter and code database 
Description:         todo 
License:             MIT 
Author:              Paul Chiusano
Maintainer:          paul.chiusano@gmail.com 
Stability:           Experimental
Category:            Runtime
Build-type:          Simple
Cabal-version:       >=1.2

Executable datalog
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    containers, 
    mtl, parallel

  extensions: 

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -funbox-strict-fields -O0
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O0
